--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="themecolor" content="#141E30">
     <title>kemuvx</title>
     <link rel="stylesheet" href="styles.css">
 </head>
