--- a/index.html
+++ b/index.html
@@ -6,14 +6,35 @@
     <meta name="themecolor" content="#000000">
     <title>kemuvx</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-image: url('https://media.giphy.com/media/26BGLw9e6u4f7Wg0k/giphy.gif');
+            color: #fff;
+            text-shadow: 0 0 5px #ff00ff, 0 0 10px #00ffff;
+        }
+        h1 {
+            font-size: 4rem;
+            animation: glow 1s ease-in-out infinite alternate;
+        }
+        a {
+            color: #ff00ff;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        a:hover {
+            color: #00ffff;
+            filter: hue-rotate(90deg);
+        }
+        .container {
+            animation: shake 0.5s ease-in-out infinite alternate;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <h1>KEMUVX</h1>
-        
         <p>tg: <a href="https://t.me/kemuvx" target="_blank">@kemuvx</a></p>
     </div>
 </body>
 </html>
-
 
